hw-detect (1.23) UNRELEASED; urgency=low

  * Install net-hotplug.sh as hw-detect.hotplug, not ddetect.hotplug.

 -- Colin Watson <cjwatson@debian.org>  Fri,  5 Aug 2005 12:17:08 +0100

hw-detect (1.22) unstable; urgency=low

  [ Joey Hess ]
  * Robustness fix in apply_pcmcia_resource_opts: ignore incomplete user input

  [ Colin Watson ]
  * Most of archdetect moved to libdebian-installer so that it can be used
    by other C code in d-i more conveniently. Use di_system_subarch_analyze
    from there.

  * Updated translations:
    - German (de.po) by Dennis Stampfer
    - Spanish (es.po) by Javier Fernández-Sanguino Peña
    - Lithuanian (lt.po) by Kęstutis Biliūnas
    - Macedonian (mk.po) by Georgi Stanojevski
    - Dutch (nl.po) by Bart Cornelis
    - Polish (pl.po) by Bartosz Fenski
    - Russian (ru.po) by Yuri Kozlov
    - Slovenian (sl.po) by Jure Čuhalev
    - Ukrainian (uk.po) by Eugeniy Meshcheryakov

 -- Colin Watson <cjwatson@debian.org>  Thu, 28 Jul 2005 10:59:46 +0100

hw-detect (1.21) unstable; urgency=low

  * Updated translations: 
    - Greek, Modern (1453-) (el.po) by Greek Translation Team
    - Hebrew (he.po) by Lior Kaplan
    - Indonesian (id.po) by Arief S Fitrianto
    - Japanese (ja.po) by Kenshi Muto
    - Lithuanian (lt.po) by Kęstutis Biliūnas
    - Tagalog (tl.po) by Eric Pareja
    - Wolof (wo.po) by Mouhamadou Mamoune Mbacke
    - Simplified Chinese (zh_CN.po) by Carlos Z.F. Liu

 -- Joey Hess <joeyh@debian.org>  Fri, 15 Jul 2005 16:52:02 +0300

hw-detect (1.20) unstable; urgency=low

  [ Joey Hess ]
  * Remove the missing modules warning, which was confusing to users and only
    useful for debugging. Missing modules are still logged, and d-i already 
    handles helping the user with important undeteted hardware (ethernet,
    cdrom, disk).
  
  * Updated translations: 
    - Bulgarian (bg.po) by Ognyan Kulev
    - Catalan (ca.po) by Guillem Jover
    - Czech (cs.po) by Miroslav Kure
    - Danish (da.po) by Claus Hindsgaul