@@ -1,8 +1,14 @@
 hw-detect (1.23) UNRELEASED; urgency=low
 
+  [ Colin Watson ]
   * Install net-hotplug.sh as hw-detect.hotplug, not ddetect.hotplug.
 
- -- Colin Watson <cjwatson@debian.org>  Fri,  5 Aug 2005 12:17:08 +0100
+  [ Joey Hess ]
+  * Move explicit ide-core load to before hardware autodetection, to
+    avoid ugly message in the log and to allow module parameters to really be
+    passed for it.
+
+ -- Joey Hess <joeyh@debian.org>  Fri,  5 Aug 2005 18:22:25 -0400
 
 hw-detect (1.22) unstable; urgency=low
 
